--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,14 @@
 <h1>Articles</h1>
 
+<h3>Our blog has <%= Article.public_count %> articles and counting!</h3>
+
 <ul>
 	<% @articles.each do |article| %>
+	  <% unless article.archived? %>
 		<li>
 			<%= link_to article.title, article %>
 		</li>
+	  <% end %>
 	<% end %>
 </ul>
 
