--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,5 @@
+<%= render "banner" %>
+
 <h1>Articles</h1>
 
 <h3>Our blog has <%= Article.public_count %> articles and counting!</h3>
@@ -11,5 +13,3 @@
 	  <% end %>
 	<% end %>
 </ul>
-
-<%= link_to "New Article", new_article_path %>
