--- a/app/views/articles/_banner.html.erb
+++ b/app/views/articles/_banner.html.erb
@@ -2,6 +2,9 @@
 	<div id="siteName">
 		<p>Boyd's Blog</p>
 	</div>
+	<div id="slogan">
+		<p><i>A place for thoughts to flow</i></p>
+	</div>
 	<div id="newArticleLink">
 		<%= link_to "New Article", new_article_path %>
 	</div>
