--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,44 +28,42 @@ body {
 
 #banner {
 	border: 1px solid #000;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-around;
-	align-items: center;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
 }
 
 #siteName {
-	flex: 3;
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	text-align: center;
-	padding: 2rem;
 	font-size: 4.5rem;
+	border: 2px dashed purple;
 }
 
-#slogan {
-	border: 1px dashed blue;
-	flex: 3;
+#sloganNewArtCont {
+	border: 2px solid red;
+	flex: 2;
 	display: flex;
-	justify-content: flex-end;
-	align-items: flex-end;
-	text-align: center;
-	font-size: 1.5rem;
-	align-self: flex-end;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: 10px;
 }
 
 #newArticleLink {
-	border: 1px solid black;
-	flex: 1;
-	font-size: 1.5rem;
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-	text-align: center;
-	align-self: flex-start;
-	padding: 0.7rem;
+	border: 2px dotted blue;
+	align-self: flex-end;
+	padding: 1rem;
 }
 
 #newArticleLink a {
-	text-decoration: none;
+	font-size: 1.5rem;
+}
+
+#slogan {
+	border: 2px dashed green;
+	align-self: flex-start;
+	font-size: 1.5rem;
+	letter-spacing: 3px;
+	text-align: center;
 }
