--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,27 +22,29 @@
 body {
 	display: grid;
 	grid-template-rows: repeat(3, 1fr);
-	background-color: #EAE2B7;
-	color: #003049;
+	background-color: #003049;
+	color: #EBF8FF;
 }
 
+
 #banner {
-	border: 1px solid #000;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+	box-shadow: 1px 1px 5px 2px  #FCBF49;
+	padding: 0.5rem;
 }
 
 #siteName {
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
+	padding-left: 20px;
 	align-items: center;
 	text-align: center;
 	font-size: 4.5rem;
-	border: 2px dashed purple;
+	letter-spacing: 5px;
 }
 
 #sloganNewArtCont {
-	border: 2px solid red;
 	flex: 2;
 	display: flex;
 	flex-direction: column;
@@ -51,19 +53,19 @@ body {
 }
 
 #newArticleLink {
-	border: 2px dotted blue;
 	align-self: flex-end;
 	padding: 1rem;
 }
 
 #newArticleLink a {
 	font-size: 1.5rem;
+	text-decoration: none;
+	color: #FCBF49;
 }
 
 #slogan {
-	border: 2px dashed green;
 	align-self: flex-start;
 	font-size: 1.5rem;
-	letter-spacing: 3px;
+	letter-spacing: 6px;
 	text-align: center;
 }
