--- a/app/views/articles/_banner.html.erb
+++ b/app/views/articles/_banner.html.erb
@@ -7,7 +7,7 @@
 			<%= link_to "New Article", new_article_path %>
 		</div>
 		<div id="slogan">
-			<p><i>A place for thoughts to flow</i></p>
+			<p><i>A place for thoughts to flow...</i></p>
 		</div>
 	</div>
 </div>
