--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#totArtInfo {
+	border: 1px solid #000;
+	display: grid;
+	grid-template-rows: 1.5fr 1fr;
+}
+
+#totArtInfo h2 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 2px dotted green;
+}
+
+#totArtInfo h1 {
+	display: flex;
+	align-items: center;
+	padding-left: 20px;
+	border: 1px dashed blue;
+	font-size: 3rem;
+}
+
+#totArtDis {
+	border: 1px dashed red;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	padding: 10px;
+	gap: 30px;
+}
+
+.articlePreview {
+	border: 2px dashed purple;
+}
