--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,28 @@
 <%= render "banner" %>
 
-<h1>Articles</h1>
+<div id="totArtInfo">
+	<h2>Our blog has <%= Article.public_count %> articles and counting!</h3>
+	<h1>Articles</h1>
+</div>
 
-<h3>Our blog has <%= Article.public_count %> articles and counting!</h3>
-
-<ul>
+<div id="totArtDis">
 	<% @articles.each do |article| %>
-	  <% unless article.archived? %>
-		<li>
-			<%= link_to article.title, article %>
-		</li>
-	  <% end %>
+	  	<% unless article.archived? %>
+			<div class="articlePreview">
+				<div class="articleTitle">
+					<%= article.title %>
+				</div>
+				<div class="articlePreview">
+					<% if article.body.length < 100 %>
+						<%= article.body %>
+					<% else %>
+						<%= article.body[..100] + "..." %>
+					<% end %>
+				</div>
+				<div class="seeMoreButton">
+					<%= link_to "See More", article %>
+				</div>
+			</div>
+	  	<% end %>
 	<% end %>
-</ul>
+</div>
