--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,7 @@
 
 body {
 	display: grid;
-	grid-template-rows: 1fr 1fr 3fr;
+	grid-template-rows: 1fr 1fr 3fr 0.3fr;
 	background-color: #EAE2B7;
 	color: #003049;
 }
@@ -80,4 +80,14 @@ body {
 	font-size: 1.5rem;
 	letter-spacing: 6px;
 	text-align: center;
+}
+
+#footer {
+	background-color: #003049;
+	color: #EBF8FF;
+	font-size: 1.2rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 1px 2px 3px 6px #000000;
 }
