--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,8 +21,8 @@
 						<% end %>
 					</p>
 				</div>
-				<div class="seeMoreButton">
-					<%= link_to "See More", article %>
+				<div class="readButton">
+					<%= link_to "Read", article %>
 				</div>
 			</div>
 	  	<% end %>
