--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,11 +21,10 @@
 
 body {
 	display: grid;
-	grid-template-rows: 1fr 1fr 3fr 0.3fr;
+	grid-template-rows: 1fr 6fr 0.5fr;
 	background-color: #EAE2B7;
 	color: #003049;
 }
-
 
 #banner {
 	display: grid;
@@ -35,6 +34,7 @@ body {
 	background-color: #003049;
 	border-bottom: 1px solid #EAE2B7;
 	color: #EBF8FF;
+	z-index: 1;
 }
 
 #siteName {
