--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -85,3 +85,60 @@
 }
 
 /* END things on the index page */
+
+/* BEGIN things on the show page */
+
+#showCont {
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+}
+
+#articleCont {
+	border: 2px dashed blue;
+	display: grid;
+	grid-template-rows: 1fr 3fr 0.5fr;
+	padding: 20px;
+}
+
+#articleCont h1 {
+	font-size: 3rem;
+}	
+
+#articleCont p {
+	font-size: 1.5rem;
+}
+
+#articleControls {
+	border: 2px dotted red;
+	display: flex;
+	flex-flow: row wrap;
+	align-items: center;
+	justify-content: flex-end;
+	gap: 20px;
+}
+
+#articleControls a {
+	border: 2px dashed purple;
+	font-size: 1.2rem;
+	text-decoration: none;
+	background-color: #003049;
+	color: #EBF8FF;
+	padding: 5px 5px 2px 5px;
+	width: 70px;
+	border-radius: 10px;
+	text-align: center;
+	box-shadow: 0px 0px 1px #003049; 
+	transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
+}
+
+#articleControls a:hover {
+	background-color: #FCBF49;
+	color: #003049;
+	box-shadow: 0px 0px 1px #FCBF49;
+}
+
+#commentsCont {
+	border: 2px solid green;
+}
+
+/* END things on the show page */
