--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -25,7 +25,8 @@
 		<% else %>
 			<%= render @article.comments %>
 		<% end %>
-
+	</div>
+	<div id="commentFormCont">
 		<h2>Add a comment</h2>
 		<%= render 'comments/form' %>
 	</div>
