--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,83 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#commentsCont {
+	border: 1px solid #000;
+	padding: 30px 60px 60px 80px;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
+#commentsCont h2 {
+	font-size: 2.2rem;
+	padding-bottom: 20px;
+}
+
+.comment {
+	background-color: #FFF;
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+	padding: 10px;
+	justify-content: space-between;
+	box-shadow: 1px 1px 4px #000;
+}
+
+.comment a {
+	text-decoration: none;
+	border: 1px solid 
+}
+
+#commentFormCont {
+	display: flex;
+	flex-direction: column;
+	padding: 30px 60px 60px 80px;
+}
+
+#commentFormCont h2 {
+	font-size: 2.2rem;
+	flex: 1;
+}
+
+#formCont {
+	flex: 4;
+}
+
+#formCont label {
+	font-size: 1.3rem;
+}
+
+#commenter {
+	font-size: 1.5rem;
+}
+
+#commentBody {
+	font-size: 1.2rem;
+}
+
+#formCont {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	padding: 10px;
+}
+
+#formCont p {
+	padding-bottom: 10px;
+}
+
+#formCont p input {
+	font-size: 1.1rem;
+	padding: 2px;
+}
+
+#formCont p textarea {
+	padding: 2px;
+	font-size: 1.1rem;
+}
+
+#formCont p select {
+	font-size: 1.1rem;
+	padding: 2px;
+}
