--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,19 +1,20 @@
 <% unless comment.archived? %>
-	<p>
-		<strong>Commenter:</strong>
-		<%= comment.commenter %>
-	</p>
+	<div class="comment">
+		<p id="commenter">
+			<strong><%= comment.commenter %></strong>
+		</p>
 
-	<p>
-		<strong>Comment:</strong>
-		<%= comment.body %>
-	</p>
+		<p id="commentBody">
+			<strong>Comment:</strong>
+			<%= comment.body %>
+		</p>
 
-	<p>
-		<%= link_to "Destroy Comment", [comment.article, comment], data:
-									   {
-									     turbo_method: :delete,
-										 turbo_confirm: "Are you sure?"
-									   } %>
-	</p>
+		<p>
+			<%= link_to "Delete Comment", [comment.article, comment], data:
+										   {
+										     turbo_method: :delete,
+											 turbo_confirm: "Are you sure?"
+										   } %>
+		</p>
+	</div>
 <% end %>
