--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -20,14 +20,26 @@
 	display: flex;
 	flex-direction: column;
 	flex: 1;
-	padding: 10px;
+	padding: 20px;
+	gap: 20px;
 	justify-content: space-between;
 	box-shadow: 1px 1px 4px #000;
 }
 
 .comment a {
 	text-decoration: none;
-	border: 1px solid 
+	background-color: #003049;
+	border: 2px solid #F77F00;
+	border-radius: 10px;
+	color: #F77F00;
+	font-weight: bold;
+	padding: 0.6rem 0.3rem 0.3rem 0.3rem;
+}
+
+.comment a:hover {
+	background-color: #FCBF49;
+	color: #003049;
+	border: 2px solid #003049;
 }
 
 #commentFormCont {
