--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,10 @@
 <%= render "banner" %>
 
-<h1>New Article</h1>
+<div id="newArtCont">
+	<h1>New Article</h1>
 
-<%= render "form", article: @article %>
+	<%= render "form", article: @article %>
+
+</div>
+
+<%= render "footer" %>
