--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -144,3 +144,67 @@
 }
 
 /* END things on the show page */
+
+
+/* BEGIN things on the new page */
+
+#newArtCont {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+#newArtCont h1 {
+	flex: 1;
+	display: flex;
+	font-size: 2.8rem;
+	flex-direction: column;
+	justify-content: center;
+}
+
+#newArtCont form {
+	flex: 3;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	text-align: center;
+}
+
+#newArtCont form label {
+	font-size: 1.5rem;
+}
+
+#newArtCont form select {
+	font-size: 1.1rem;
+	padding: 2px;
+}
+
+#newArtCont form input {
+	font-size: 1.1rem;
+	padding: 2px;
+}
+
+#newArtCont form textarea {
+	padding: 2px;
+	font-size: 1.1rem;
+}
+
+#newArtCont form input[type="submit"] {
+	background-color: #003049;
+	color: #F77F00;
+	padding: 0.4rem;
+	border: 2px solid #F77F00;
+	border-radius: 10px;
+	font-weight: bold;
+	transition: background-color 0.3s, color 0.3s, border 0.3s;
+}
+
+#newArtCont form input[type="submit"]:hover {
+	border: 2px solid #003049;
+	color: #003049;
+	background-color: #FCBF49;
+}
+
+/* END things on the new page */
