--- a/app/views/articles/_banner.html.erb
+++ b/app/views/articles/_banner.html.erb
@@ -1,6 +1,6 @@
 <div id="banner">
 	<div id="siteName">
-		<p>Boyd's Blog</p>
+		<%= link_to "Boyd's Blog", root_path %>
 	</div>
 	<div id="sloganNewArtCont">
 		<div id="newArticleLink">
