--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -5,7 +5,8 @@
 /* BEGIN Things on the index page */
 #indexCont {
 	display: grid;
-	grid-template-rows: 1fr 4fr;
+	grid-template-rows: 0.2fr 1fr;
+	grid-template-columns: 1fr;
 	background-color: #EAE2B7;
 	color: #003049;
 }
@@ -13,6 +14,8 @@
 #totArtInfo {
 	display: grid;
 	grid-template-rows: 1fr 1fr;
+	padding: 10px;
+	text-align: center;
 }
 
 #totArtInfo h2 {
@@ -30,7 +33,8 @@
 
 #totArtDis {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-rows: repeat(auto-fit, 1fr);
 	padding: 30px;
 	gap: 30px;
 }
@@ -39,8 +43,9 @@
 	border: 1px solid black;
 	border-radius: 10px;
 	display: grid;
-	grid-template-rows: 2fr 2fr 1fr;
-	padding: 20px;
+	grid-template-rows: 1fr 1fr 0.5fr;
+	grid-template-columns: 1fr;
+	padding: 30px;
 	box-shadow: 0px 1px 3px 1px #003049;
 	background-color: #F9FAEF;
 }
