--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,7 @@
 
 body {
 	display: grid;
-	grid-template-rows: 1fr 3fr 0.5fr;
+	grid-template-rows: 0.5fr 3fr 0.5fr;
 	grid-template-columns: 1fr;
 	background-color: #EAE2B7;
 	color: #003049;
@@ -30,6 +30,7 @@ body {
 #banner {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	gap: 10px;
 	box-shadow: 1px 1px 5px 2px #003049;
 	padding: 0.5rem;
 	background-color: #003049;
