--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -4,7 +4,7 @@
 
 #commentsCont {
 	border-top: 1px solid #000;
-	padding: 30px 60px 60px 80px;
+	padding: 30px 40px 50px 40px;
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
@@ -15,12 +15,16 @@
 	padding-bottom: 20px;
 }
 
+#noCommentMsg {
+	font-size: 1.5rem;
+}
+
 .comment {
 	background-color: #FFF;
 	display: flex;
 	flex-direction: column;
 	flex: 1;
-	padding: 20px;
+	padding: 30px 20px 30px 20px;
 	gap: 20px;
 	justify-content: space-between;
 	box-shadow: 1px 1px 4px #000;
@@ -33,7 +37,7 @@
 	border-radius: 10px;
 	color: #F77F00;
 	font-weight: bold;
-	padding: 0.6rem 0.3rem 0.3rem 0.3rem;
+	padding: 0.5rem;
 	transition: background-color 0.3s, color 0.3s, border 0.3s;
 }
 
@@ -46,16 +50,13 @@
 #commentFormCont {
 	display: flex;
 	flex-direction: column;
-	padding: 30px 60px 60px 80px;
+	align-items: center;
 }
 
 #commentFormCont h2 {
 	font-size: 2.2rem;
 	flex: 1;
-}
-
-#formCont {
-	flex: 4;
+	color: #003049;
 }
 
 #formCont label {
@@ -71,9 +72,8 @@
 }
 
 #formCont {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
 	padding: 10px;
+	color: #003049;
 }
 
 #formCont p {
@@ -91,6 +91,17 @@
 }
 
 #formCont p select {
-	font-size: 1.1rem;
-	padding: 2px;
+	font-size: 1.3rem;
+	padding: 5px;
+	background-color: #003049;
+	color: #EBf8FF;
+	border-radius: 10px;
+}
+
+#formCont input[type="submit"] {
+	background-color: #003049;
+	color: #EBF8FF;
+	padding: 5px;
+	border: 2px solid #003049;
+	border-radius: 10px;
 }
