--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,10 @@
   <head>
     <title>Boyd's Blog</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <%= csrf_meta_tags %>
+	<%= favicon_link_tag 'favicon.ico' %>
+	<%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
